--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
       <div class="column1">
         <form>
           <p>INPUT</p>
-          <textarea class="textbox" name="in" id="in"></textarea><br />
+          <textarea class="textbox" name="in" id="in" onsubmit="onclick"></textarea><br />
         </form>
       </div>
       <div class="column2">
